--- a/recommender-system.ipynb
+++ b/recommender-system.ipynb
@@ -8,7 +8,7 @@
     {
      "data": {
       "text/plain": [
-       "158"
+       "211"
       ]
      },
      "execution_count": 1,
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +183,7 @@
        "4         1   823519       3  2004-05-03"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +202,7 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 100480507 entries, 0 to 100480506\n",
+      "RangeIndex: 24053764 entries, 0 to 24053763\n",
       "Data columns (total 4 columns):\n",
       " #   Column    Dtype \n",
       "---  ------    ----- \n",
@@ -211,7 +211,7 @@
       " 2   Rating    int64 \n",
       " 3   Date      object\n",
       "dtypes: int64(3), object(1)\n",
-      "memory usage: 3.0+ GB\n"
+      "memory usage: 734.1+ MB\n"
      ]
     }
    ],
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -229,40 +229,41 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 100480507 entries, 0 to 100480506\n",
+      "RangeIndex: 24053764 entries, 0 to 24053763\n",
       "Data columns (total 4 columns):\n",
       " #   Column    Dtype \n",
       "---  ------    ----- \n",
-      " 0   Movie_Id  int32 \n",
-      " 1   Cust_Id   int32 \n",
-      " 2   Rating    int32 \n",
+      " 0   Movie_Id  uint16\n",
+      " 1   Cust_Id   uint16\n",
+      " 2   Rating    uint16\n",
       " 3   Date      object\n",
-      "dtypes: int32(3), object(1)\n",
-      "memory usage: 1.9+ GB\n"
+      "dtypes: object(1), uint16(3)\n",
+      "memory usage: 321.2+ MB\n"
      ]
     }
    ],
    "source": [
-    "df['Movie_Id'] = df['Movie_Id'].astype(int)\n",
-    "df['Cust_Id'] = df['Cust_Id'].astype(int)\n",
-    "df['Rating'] = df['Rating'].astype(int)\n",
+    "df['Movie_Id'] = df['Movie_Id'].astype(np.uint16)\n",
+    "df['Cust_Id'] = df['Cust_Id'].astype(np.uint16)\n",
+    "df['Rating'] = df['Rating'].astype(np.uint16)\n",
     "df.info()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Movie minimum times of review: 4040.0\n",
-      "Customer minimum times of review: 322.0\n",
-      "Original Shape: (100480507, 4)\n",
-      "After Trim Shape: (56222526, 4)\n",
-      "-Data Examples-\n"
+      "Movie minimum times of review: 3884.0\n",
+      "Customer minimum times of review: 533.0\n",
+      "Original Shape: (24053764, 4)\n",
+      "After Trim Shape: (8318702, 4)\n",
+      "number of movies deleted is  3599\n",
+      "number of customers deleted is  52352\n"
      ]
     }
    ],
@@ -289,47 +290,15 @@
     "df = df[~df['Movie_Id'].isin(drop_movie_list)]\n",
     "df = df[~df['Cust_Id'].isin(drop_cust_list)]\n",
     "print('After Trim Shape: {}'.format(df.shape))\n",
-    "# print('-Data Examples-')\n",
-    "# print(df.iloc[::5000000, :])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "number of movies deleted is  14216\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"number of movies deleted is \" , len(drop_movie_list))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "number of customers deleted is  383899\n"
-     ]
-    }
-   ],
-   "source": [
+    "\n",
+    "\n",
+    "print(\"number of movies deleted is \" , len(drop_movie_list))\n",
     "print(\"number of customers deleted is \" , len(drop_cust_list))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -337,15 +306,15 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 56222526 entries, 5101 to 100479585\n",
+      "Int64Index: 8318702 entries, 5100 to 24052350\n",
       "Data columns (total 3 columns):\n",
-      " #   Column    Dtype\n",
-      "---  ------    -----\n",
-      " 0   Movie_Id  int32\n",
-      " 1   Cust_Id   int32\n",
-      " 2   Rating    int32\n",
-      "dtypes: int32(3)\n",
-      "memory usage: 1.0 GB\n"
+      " #   Column    Dtype \n",
+      "---  ------    ----- \n",
+      " 0   Movie_Id  uint16\n",
+      " 1   Cust_Id   uint16\n",
+      " 2   Rating    uint16\n",
+      "dtypes: uint16(3)\n",
+      "memory usage: 111.1 MB\n"
      ]
     }
    ],
@@ -356,45 +325,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 56222526 entries, 5101 to 100479585\n",
-      "Data columns (total 3 columns):\n",
-      " #   Column    Dtype \n",
-      "---  ------    ----- \n",
-      " 0   Movie_Id  uint16\n",
-      " 1   Cust_Id   uint16\n",
-      " 2   Rating    uint16\n",
-      "dtypes: uint16(3)\n",
-      "memory usage: 750.7 MB\n"
-     ]
-    }
-   ],
-   "source": [
-    "df['Movie_Id'] = df['Movie_Id'].astype(np.uint16)\n",
-    "df['Cust_Id'] = df['Cust_Id'].astype(np.uint16)\n",
-    "df['Rating'] = df['Rating'].astype(np.uint16)\n",
-    "df.info()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "22"
+       "0"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,14 +346,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_title = pd.read_csv(\"D:\\\\netflix dataset\\\\netflix-prize-data\\\\movie_titles.csv\", encoding=\"ISO-8859-1\",\n",
+    "                        header=None, names=['Movie_Id', 'Year', 'Name'], usecols=[0, 1, 2])\n",
+    "df_title.set_index('Movie_Id', inplace=True)\n",
+    "\n",
+    "df_title.head(10)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(50840, 3554)\n"
+      "(13159, 900)\n"
      ]
     }
    ],
@@ -426,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -434,10 +394,10 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "UInt64Index: 50840 entries, 2 to 65534\n",
-      "Columns: 3554 entries, 8 to 17769\n",
-      "dtypes: float64(3554)\n",
-      "memory usage: 1.3 GB\n"
+      "UInt64Index: 13159 entries, 2 to 65534\n",
+      "Columns: 900 entries, 8 to 4496\n",
+      "dtypes: float64(900)\n",
+      "memory usage: 90.5 MB\n"
      ]
     }
    ],
@@ -461,11 +421,24 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "def recommend(movie_title, min_count):\n",
+    "    print(\"For movie ({})\".format(movie_title))\n",
+    "    print(\"- Top 10 movies recommended based on Pearsons'R correlation - \")\n",
+    "    i = int(df_title.index[df_title['Name'] == movie_title][0])\n",
+    "    target = df_p[i]\n",
+    "    similar_to_target = df_p.corrwith(target)\n",
+    "    corr_target = pd.DataFrame(similar_to_target, columns = ['PearsonR'])\n",
+    "    corr_target.dropna(inplace = True)\n",
+    "    corr_target = corr_target.sort_values('PearsonR', ascending = False)\n",
+    "    corr_target.index = corr_target.index.map(int)\n",
+    "    corr_target = corr_target.join(df_title).join(df_movie_summary)[['PearsonR', 'Name', 'count', 'mean']]\n",
+    "    print(corr_target[corr_target['count']>min_count][:10].to_string(index=False))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
