optimizing recommend function

--- a/recommender-system.ipynb
+++ b/recommender-system.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "211"
+       "949"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +183,7 @@
        "4         1   823519       3  2004-05-03"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +202,7 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 24053764 entries, 0 to 24053763\n",
+      "RangeIndex: 100480507 entries, 0 to 100480506\n",
       "Data columns (total 4 columns):\n",
       " #   Column    Dtype \n",
       "---  ------    ----- \n",
@@ -211,7 +211,7 @@
       " 2   Rating    int64 \n",
       " 3   Date      object\n",
       "dtypes: int64(3), object(1)\n",
-      "memory usage: 734.1+ MB\n"
+      "memory usage: 3.0+ GB\n"
      ]
     }
    ],
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -229,41 +229,41 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 24053764 entries, 0 to 24053763\n",
-      "Data columns (total 4 columns):\n",
+      "RangeIndex: 100480507 entries, 0 to 100480506\n",
+      "Data columns (total 3 columns):\n",
       " #   Column    Dtype \n",
       "---  ------    ----- \n",
-      " 0   Movie_Id  uint16\n",
-      " 1   Cust_Id   uint16\n",
-      " 2   Rating    uint16\n",
-      " 3   Date      object\n",
-      "dtypes: object(1), uint16(3)\n",
-      "memory usage: 321.2+ MB\n"
+      " 0   Movie_Id  uint32\n",
+      " 1   Cust_Id   uint32\n",
+      " 2   Rating    uint8 \n",
+      "dtypes: uint32(2), uint8(1)\n",
+      "memory usage: 862.4 MB\n"
      ]
     }
    ],
    "source": [
-    "df['Movie_Id'] = df['Movie_Id'].astype(np.uint16)\n",
-    "df['Cust_Id'] = df['Cust_Id'].astype(np.uint16)\n",
-    "df['Rating'] = df['Rating'].astype(np.uint16)\n",
+    "df['Movie_Id'] = df['Movie_Id'].astype(np.uint32)\n",
+    "df['Cust_Id'] = df['Cust_Id'].astype(np.uint32)\n",
+    "df['Rating'] = df['Rating'].astype(np.uint8)\n",
+    "df.drop(['Date'], axis=1, inplace=True)\n",
     "df.info()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Movie minimum times of review: 3884.0\n",
-      "Customer minimum times of review: 533.0\n",
-      "Original Shape: (24053764, 4)\n",
-      "After Trim Shape: (8318702, 4)\n",
-      "number of movies deleted is  3599\n",
-      "number of customers deleted is  52352\n"
+      "Movie minimum times of review: 4040.0\n",
+      "Customer minimum times of review: 2217.0\n",
+      "Original Shape: (100480507, 3)\n",
+      "After Trim Shape: (34418907, 3)\n",
+      "number of movies deleted is  14216\n",
+      "number of customers deleted is  52409\n"
      ]
     }
    ],
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -306,49 +306,134 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 8318702 entries, 5100 to 24052350\n",
+      "Int64Index: 34418907 entries, 5100 to 100479585\n",
       "Data columns (total 3 columns):\n",
       " #   Column    Dtype \n",
       "---  ------    ----- \n",
-      " 0   Movie_Id  uint16\n",
-      " 1   Cust_Id   uint16\n",
-      " 2   Rating    uint16\n",
-      "dtypes: uint16(3)\n",
-      "memory usage: 111.1 MB\n"
+      " 0   Movie_Id  uint32\n",
+      " 1   Cust_Id   uint32\n",
+      " 2   Rating    uint8 \n",
+      "dtypes: uint32(2), uint8(1)\n",
+      "memory usage: 558.0 MB\n"
      ]
     }
    ],
    "source": [
-    "df.drop(['Date'], axis=1, inplace=True)\n",
-    "df.info()"
+    "# del df_cust_summary, df_movie_summary, drop_movie_list, drop_cust_list\n",
+    "gc.collect()\n",
+    "df.info()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Name</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Movie_Id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2003.0</td>\n",
+       "      <td>Dinosaur Planet</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2004.0</td>\n",
+       "      <td>Isle of Man TT 2004 Review</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1997.0</td>\n",
+       "      <td>Character</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1994.0</td>\n",
+       "      <td>Paula Abdul's Get Up &amp; Dance</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2004.0</td>\n",
+       "      <td>The Rise and Fall of ECW</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1997.0</td>\n",
+       "      <td>Sick</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>1992.0</td>\n",
+       "      <td>8 Man</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2004.0</td>\n",
+       "      <td>What the #$*! Do We Know!?</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>1991.0</td>\n",
+       "      <td>Class of Nuke 'Em High 2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>2001.0</td>\n",
+       "      <td>Fighter</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "0"
+       "            Year                          Name\n",
+       "Movie_Id                                      \n",
+       "1         2003.0               Dinosaur Planet\n",
+       "2         2004.0    Isle of Man TT 2004 Review\n",
+       "3         1997.0                     Character\n",
+       "4         1994.0  Paula Abdul's Get Up & Dance\n",
+       "5         2004.0      The Rise and Fall of ECW\n",
+       "6         1997.0                          Sick\n",
+       "7         1992.0                         8 Man\n",
+       "8         2004.0    What the #$*! Do We Know!?\n",
+       "9         1991.0      Class of Nuke 'Em High 2\n",
+       "10        2001.0                       Fighter"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "del df_cust_summary, df_movie_summary, drop_movie_list, drop_cust_list\n",
-    "gc.collect()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "df_title = pd.read_csv(\"D:\\\\netflix dataset\\\\netflix-prize-data\\\\movie_titles.csv\", encoding=\"ISO-8859-1\",\n",
     "                        header=None, names=['Movie_Id', 'Year', 'Name'], usecols=[0, 1, 2])\n",
@@ -366,14 +451,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(13159, 900)\n"
+      "(13104, 3554)\n"
      ]
     }
    ],
@@ -386,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -394,10 +479,10 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "UInt64Index: 13159 entries, 2 to 65534\n",
-      "Columns: 900 entries, 8 to 4496\n",
-      "dtypes: float64(900)\n",
-      "memory usage: 90.5 MB\n"
+      "UInt64Index: 13104 entries, 2 to 65534\n",
+      "Columns: 3554 entries, 8 to 17769\n",
+      "dtypes: float64(3554)\n",
+      "memory usage: 355.4 MB\n"
      ]
     }
    ],
@@ -407,27 +492,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1018"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def recommend(movie_title, min_count):\n",
     "    print(\"For movie ({})\".format(movie_title))\n",
     "    print(\"- Top 10 movies recommended based on Pearsons'R correlation - \")\n",
     "    i = int(df_title.index[df_title['Name'] == movie_title][0])\n",
-    "    target = df_p[i]\n",
-    "    similar_to_target = df_p.corrwith(target)\n",
+    "    target = df_pivot[i]\n",
+    "    similar_to_target = df_pivot.corrwith(target)\n",
     "    corr_target = pd.DataFrame(similar_to_target, columns = ['PearsonR'])\n",
     "    corr_target.dropna(inplace = True)\n",
     "    corr_target = corr_target.sort_values('PearsonR', ascending = False)\n",
@@ -438,9 +512,132 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "For movie (What the #$*! Do We Know!?)\n",
+      "- Top 10 movies recommended based on Pearsons'R correlation - \n",
+      " PearsonR                       Name  count     mean\n",
+      " 1.000000 What the #$*! Do We Know!?  14910 3.189805\n",
+      " 0.203544                    To Live   4438 4.009464\n",
+      " 0.188774              Riding Giants   7863 3.939845\n",
+      " 0.179873          The King of Masks   5191 3.962628\n",
+      " 0.168871            The Corporation  11238 3.763125\n",
+      " 0.167721         My House in Umbria   4045 3.465019\n",
+      " 0.167181           Monsieur Ibrahim   7542 3.866083\n",
+      " 0.166247             Ma Vie En Rose   7895 3.912476\n",
+      " 0.165893         Farscape: Season 3   4346 4.348136\n",
+      " 0.164348                 The Chorus   9151 4.092230\n"
+     ]
+    }
+   ],
+   "source": [
+    "recommend(\"What the #$*! Do We Know!?\", 0)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "For movie (X2: X-Men United)\n",
+      "- Top 10 movies recommended based on Pearsons'R correlation - \n",
+      " PearsonR                                                   Name  count     mean\n",
+      " 1.000000                                       X2: X-Men United  34563 3.935798\n",
+      " 0.215645                                   The Matrix: Reloaded  37237 3.506512\n",
+      " 0.196113                                              Daredevil  23759 2.960268\n",
+      " 0.174419                                 Todd McFarlane's Spawn   2410 3.562656\n",
+      " 0.173782 Pirates of the Caribbean: The Curse of the Black Pearl  60071 4.156648\n",
+      " 0.172105                                              The Mummy  32633 3.624276\n",
+      " 0.171315                                The Matrix: Revolutions  22625 3.502276\n",
+      " 0.169546                                              Kickboxer   3052 3.282110\n",
+      " 0.168623                                   Smallville: Season 1   4142 4.111299\n",
+      " 0.164026                                   Return of the Dragon   2950 3.934576\n"
+     ]
+    }
+   ],
+   "source": [
+    "recommend(\"X2: X-Men United\", 0)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "For movie (X2: X-Men United)\n",
+      "- Top 10 movies recommended based on Pearsons'R correlation - \n",
+      " PearsonR                                  Name  count     mean\n",
+      " 1.000000                      X2: X-Men United  98720 3.932202\n",
+      " 0.396015                                 X-Men  99304 3.891223\n",
+      " 0.269202                            Spider-Man 132142 3.871517\n",
+      " 0.232979                          Spider-Man 2 136461 3.905768\n",
+      " 0.216289                  The Matrix: Reloaded 106807 3.514704\n",
+      " 0.200516                               Blade 2  53993 3.463486\n",
+      " 0.199808 The League of Extraordinary Gentlemen 111946 3.044343\n",
+      " 0.199602    Terminator 3: Rise of the Machines  88310 3.308527\n",
+      " 0.195642                                Batman  76601 3.708215\n",
+      " 0.195100                             Daredevil  62628 2.979642\n"
+     ]
+    }
+   ],
+   "source": [
+    "recommend(\"X2: X-Men United\", 0)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'test_rmse': array([0.95945732, 0.96090222, 0.9599608 , 0.96005118, 0.95973295]),\n",
+       " 'test_mae': array([0.7622917 , 0.76309682, 0.7625518 , 0.76276465, 0.76241396]),\n",
+       " 'fit_time': (113.20451712608337,\n",
+       "  116.81955790519714,\n",
+       "  112.04496645927429,\n",
+       "  105.27772545814514,\n",
+       "  113.24493336677551),\n",
+       " 'test_time': (47.689056396484375,\n",
+       "  33.096291303634644,\n",
+       "  34.603400468826294,\n",
+       "  29.052910089492798,\n",
+       "  29.621825218200684)}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "reader = Reader()\n",
     "\n",
