--- a/recommender-system.ipynb
+++ b/recommender-system.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "949"
+       "211"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +183,7 @@
        "4         1   823519       3  2004-05-03"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -251,19 +251,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Movie minimum times of review: 4040.0\n",
-      "Customer minimum times of review: 2217.0\n",
+      "Movie minimum times of review: 1948.0\n",
+      "Customer minimum times of review: 211.0\n",
       "Original Shape: (100480507, 3)\n",
-      "After Trim Shape: (34418907, 3)\n",
-      "number of movies deleted is  14216\n",
-      "number of customers deleted is  52409\n"
+      "After Trim Shape: (71833509, 3)\n",
+      "number of movies deleted is  12438\n",
+      "number of customers deleted is  335809\n"
      ]
     }
    ],
@@ -272,7 +272,7 @@
     "\n",
     "df_movie_summary = df.groupby('Movie_Id')['Rating'].agg(f)\n",
     "df_movie_summary.index = df_movie_summary.index.map(int)\n",
-    "movie_benchmark = round(df_movie_summary['count'].quantile(0.8), 0)\n",
+    "movie_benchmark = round(df_movie_summary['count'].quantile(0.7), 0)\n",
     "drop_movie_list = df_movie_summary[df_movie_summary['count']\n",
     "                                   < movie_benchmark].index\n",
     "\n",
@@ -280,7 +280,7 @@
     "\n",
     "df_cust_summary = df.groupby('Cust_Id')['Rating'].agg(f)\n",
     "df_cust_summary.index = df_cust_summary.index.map(int)\n",
-    "cust_benchmark = round(df_cust_summary['count'].quantile(0.8), 0)\n",
+    "cust_benchmark = round(df_cust_summary['count'].quantile(0.7), 0)\n",
     "drop_cust_list = df_cust_summary[df_cust_summary['count']\n",
     "                                 < cust_benchmark].index\n",
     "\n",
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +306,7 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 34418907 entries, 5100 to 100479585\n",
+      "Int64Index: 71833509 entries, 693 to 100479585\n",
       "Data columns (total 3 columns):\n",
       " #   Column    Dtype \n",
       "---  ------    ----- \n",
@@ -314,7 +314,7 @@
       " 1   Cust_Id   uint32\n",
       " 2   Rating    uint8 \n",
       "dtypes: uint32(2), uint8(1)\n",
-      "memory usage: 558.0 MB\n"
+      "memory usage: 1.1 GB\n"
      ]
     }
    ],
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +429,7 @@
        "10        2001.0                       Fighter"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,14 +451,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(13104, 3554)\n"
+      "(144380, 5332)\n"
      ]
     }
    ],
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -479,24 +479,26 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "UInt64Index: 13104 entries, 2 to 65534\n",
-      "Columns: 3554 entries, 8 to 17769\n",
-      "dtypes: float64(3554)\n",
-      "memory usage: 355.4 MB\n"
+      "UInt64Index: 144380 entries, 6 to 2649429\n",
+      "Columns: 5332 entries, 3 to 17769\n",
+      "dtypes: float64(5332)\n",
+      "memory usage: 5.7 GB\n"
      ]
     }
    ],
    "source": [
-    "df_pivot.info()"
+    "df_pivot.info()\n",
+    "# nearly 6 gb of ram is used by pivot table"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def recommend(movie_title, min_count):\n",
+    "# min count is min count of ratings given by a customer\n",
+    "def get_similar_movies(movie_title, min_count):\n",
     "    print(\"For movie ({})\".format(movie_title))\n",
     "    print(\"- Top 10 movies recommended based on Pearsons'R correlation - \")\n",
     "    i = int(df_title.index[df_title['Name'] == movie_title][0])\n",
@@ -507,95 +509,134 @@
     "    corr_target = corr_target.sort_values('PearsonR', ascending = False)\n",
     "    corr_target.index = corr_target.index.map(int)\n",
     "    corr_target = corr_target.join(df_title).join(df_movie_summary)[['PearsonR', 'Name', 'count', 'mean']]\n",
-    "    print(corr_target[corr_target['count']>min_count][:10].to_string(index=False))"
+    "    print(corr_target[corr_target['count']>min_count][1:11].to_string(index=False))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "For movie (What the #$*! Do We Know!?)\n",
+      "For movie (Lord of the Rings: The Fellowship of the Ring)\n",
       "- Top 10 movies recommended based on Pearsons'R correlation - \n",
-      " PearsonR                       Name  count     mean\n",
-      " 1.000000 What the #$*! Do We Know!?  14910 3.189805\n",
-      " 0.203544                    To Live   4438 4.009464\n",
-      " 0.188774              Riding Giants   7863 3.939845\n",
-      " 0.179873          The King of Masks   5191 3.962628\n",
-      " 0.168871            The Corporation  11238 3.763125\n",
-      " 0.167721         My House in Umbria   4045 3.465019\n",
-      " 0.167181           Monsieur Ibrahim   7542 3.866083\n",
-      " 0.166247             Ma Vie En Rose   7895 3.912476\n",
-      " 0.165893         Farscape: Season 3   4346 4.348136\n",
-      " 0.164348                 The Chorus   9151 4.092230\n"
+      " PearsonR                                                                Name  count     mean\n",
+      " 0.809049                                   Lord of the Rings: The Two Towers 151245 4.460676\n",
+      " 0.756614                           Lord of the Rings: The Return of the King 134284 4.545121\n",
+      " 0.691485 The Lord of the Rings: The Fellowship of the Ring: Extended Edition  73422 4.716611\n",
+      " 0.657337                 Lord of the Rings: The Two Towers: Extended Edition  74912 4.702611\n",
+      " 0.631096         Lord of the Rings: The Return of the King: Extended Edition  73335 4.723270\n",
+      " 0.454500                   Lord of the Rings: The Two Towers: Bonus Material   2127 4.213916\n",
+      " 0.298714        National Geographic: Beyond the Movie: The Lord of the Rings   2816 3.393821\n",
+      " 0.278131                                                         Gundam Wing   2410 3.372199\n",
+      " 0.263959                                                        Samurai Jack   2427 3.890400\n",
+      " 0.259167                                                          The Matrix 140763 4.230643\n"
      ]
     }
    ],
    "source": [
-    "recommend(\"What the #$*! Do We Know!?\", 0)\n"
+    "get_similar_movies(\"Lord of the Rings: The Fellowship of the Ring\", 0)\n",
+    "# you can see it outputs similar movies \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "For movie (X2: X-Men United)\n",
-      "- Top 10 movies recommended based on Pearsons'R correlation - \n",
-      " PearsonR                                                   Name  count     mean\n",
-      " 1.000000                                       X2: X-Men United  34563 3.935798\n",
-      " 0.215645                                   The Matrix: Reloaded  37237 3.506512\n",
-      " 0.196113                                              Daredevil  23759 2.960268\n",
-      " 0.174419                                 Todd McFarlane's Spawn   2410 3.562656\n",
-      " 0.173782 Pirates of the Caribbean: The Curse of the Black Pearl  60071 4.156648\n",
-      " 0.172105                                              The Mummy  32633 3.624276\n",
-      " 0.171315                                The Matrix: Revolutions  22625 3.502276\n",
-      " 0.169546                                              Kickboxer   3052 3.282110\n",
-      " 0.168623                                   Smallville: Season 1   4142 4.111299\n",
-      " 0.164026                                   Return of the Dragon   2950 3.934576\n"
-     ]
-    }
-   ],
-   "source": [
-    "recommend(\"X2: X-Men United\", 0)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "For movie (X2: X-Men United)\n",
+      "For movie (Fight Club)\n",
       "- Top 10 movies recommended based on Pearsons'R correlation - \n",
       " PearsonR                                  Name  count     mean\n",
-      " 1.000000                      X2: X-Men United  98720 3.932202\n",
-      " 0.396015                                 X-Men  99304 3.891223\n",
-      " 0.269202                            Spider-Man 132142 3.871517\n",
-      " 0.232979                          Spider-Man 2 136461 3.905768\n",
-      " 0.216289                  The Matrix: Reloaded 106807 3.514704\n",
-      " 0.200516                               Blade 2  53993 3.463486\n",
-      " 0.199808 The League of Extraordinary Gentlemen 111946 3.044343\n",
-      " 0.199602    Terminator 3: Rise of the Machines  88310 3.308527\n",
-      " 0.195642                                Batman  76601 3.708215\n",
-      " 0.195100                             Daredevil  62628 2.979642\n"
+      " 0.380089                            12 Monkeys  76475 3.776084\n",
+      " 0.378151                                Snatch  68818 3.848005\n",
+      " 0.364983                               Memento 127318 3.851427\n",
+      " 0.357912                          Pulp Fiction 152078 4.094235\n",
+      " 0.347596                         Trainspotting  24446 3.885953\n",
+      " 0.343847 Eternal Sunshine of the Spotless Mind 110159 3.695304\n",
+      " 0.333834                        Reservoir Dogs  90450 4.003847\n",
+      " 0.326851  The Royal Tenenbaums: Bonus Material   2452 4.015905\n",
+      " 0.325274                                 Seven  99324 4.134952\n",
+      " 0.324509                              Sin City  56147 3.597663\n",
+      "For movie (Fight Club)\n",
+      "- Top 10 movies recommended based on Pearsons'R correlation - \n",
+      " PearsonR                                  Name  count     mean\n",
+      " 0.364983                               Memento 127318 3.851427\n",
+      " 0.357912                          Pulp Fiction 152078 4.094235\n",
+      " 0.343847 Eternal Sunshine of the Spotless Mind 110159 3.695304\n",
+      " 0.333834                        Reservoir Dogs  90450 4.003847\n",
+      " 0.325274                                 Seven  99324 4.134952\n",
+      " 0.317807                       American Beauty 154832 3.962585\n",
+      " 0.310578                      The Big Lebowski  81316 3.761363\n",
+      " 0.303631                     Kill Bill: Vol. 1 140564 3.759192\n",
+      " 0.299501                          Office Space  90320 4.079318\n",
+      " 0.294644                  The Royal Tenenbaums 147251 3.279835\n"
      ]
     }
    ],
    "source": [
-    "recommend(\"X2: X-Men United\", 0)\n"
+    "get_similar_movies(\"Fight Club\", 0)\n",
+    "get_similar_movies(\"Fight Club\", 80000)\n",
+    "# here it actually ouputs movies of the same genre or the the same director\n",
+    "# and min count produces better recommendations if used correctly"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "For movie (Saving Private Ryan)\n",
+      "- Top 10 movies recommended based on Pearsons'R correlation - \n",
+      " PearsonR              Name  count     mean\n",
+      " 0.348649   Black Hawk Down  77597 3.859608\n",
+      " 0.343554        Braveheart 135601 4.294423\n",
+      " 0.328930         Apollo 13  98116 4.082576\n",
+      " 0.321378         Gladiator 150592 4.202713\n",
+      " 0.321019      Forrest Gump 181508 4.299910\n",
+      " 0.315738  Band of Brothers  37514 4.513328\n",
+      " 0.315564           Platoon  64175 3.986038\n",
+      " 0.303892  We Were Soldiers  64917 4.005299\n",
+      " 0.295405  Schindler's List 101141 4.458004\n",
+      " 0.292609 Sands of Iwo Jima   7803 3.705242\n"
+     ]
+    }
+   ],
+   "source": [
+    "get_similar_movies(\"Saving Private Ryan\", 0)\n",
+    "# here it ouputs similar war movies\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
