better results with similar movies

--- a/recommender-system.ipynb
+++ b/recommender-system.ipynb
@@ -493,28 +493,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
     "# min count is min count of ratings given by a customer\n",
-    "def get_similar_movies(movie_title, min_count):\n",
+    "def get_similar_movies(movie_title, min_count = 0):\n",
     "    print(\"For movie ({})\".format(movie_title))\n",
     "    print(\"- Top 10 movies recommended based on Pearsons'R correlation - \")\n",
     "    i = int(df_title.index[df_title['Name'] == movie_title][0])\n",
     "    target = df_pivot[i]\n",
     "    similar_to_target = df_pivot.corrwith(target)\n",
-    "    corr_target = pd.DataFrame(similar_to_target, columns = ['PearsonR'])\n",
+    "    corr_target = pd.DataFrame(similar_to_target, columns=['PearsonR'])\n",
     "    corr_target.dropna(inplace = True)\n",
     "    corr_target = corr_target.sort_values('PearsonR', ascending = False)\n",
     "    corr_target.index = corr_target.index.map(int)\n",
     "    corr_target = corr_target.join(df_title).join(df_movie_summary)[['PearsonR', 'Name', 'count', 'mean']]\n",
-    "    print(corr_target[corr_target['count']>min_count][1:11].to_string(index=False))"
+    "    corr_target.rename(columns={\"Name\": \"movie name\", \"count\": \"number of ratings\"  , \"mean\": \"average rating\" ,\n",
+    "                                \"PearsonR\": \"Pearson correlation coefficient\"}, inplace=True)\n",
+    "    \n",
+    "    print(corr_target[corr_target['number of ratings']>min_count][1:11].to_string(index=False))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -523,28 +526,28 @@
      "text": [
       "For movie (Lord of the Rings: The Fellowship of the Ring)\n",
       "- Top 10 movies recommended based on Pearsons'R correlation - \n",
-      " PearsonR                                                                Name  count     mean\n",
-      " 0.809049                                   Lord of the Rings: The Two Towers 151245 4.460676\n",
-      " 0.756614                           Lord of the Rings: The Return of the King 134284 4.545121\n",
-      " 0.691485 The Lord of the Rings: The Fellowship of the Ring: Extended Edition  73422 4.716611\n",
-      " 0.657337                 Lord of the Rings: The Two Towers: Extended Edition  74912 4.702611\n",
-      " 0.631096         Lord of the Rings: The Return of the King: Extended Edition  73335 4.723270\n",
-      " 0.454500                   Lord of the Rings: The Two Towers: Bonus Material   2127 4.213916\n",
-      " 0.298714        National Geographic: Beyond the Movie: The Lord of the Rings   2816 3.393821\n",
-      " 0.278131                                                         Gundam Wing   2410 3.372199\n",
-      " 0.263959                                                        Samurai Jack   2427 3.890400\n",
-      " 0.259167                                                          The Matrix 140763 4.230643\n"
+      " Pearson correlation coefficient                                                          movie name  number of ratings  average rating\n",
+      "                        0.809049                                   Lord of the Rings: The Two Towers             151245        4.460676\n",
+      "                        0.756614                           Lord of the Rings: The Return of the King             134284        4.545121\n",
+      "                        0.691485 The Lord of the Rings: The Fellowship of the Ring: Extended Edition              73422        4.716611\n",
+      "                        0.657337                 Lord of the Rings: The Two Towers: Extended Edition              74912        4.702611\n",
+      "                        0.631096         Lord of the Rings: The Return of the King: Extended Edition              73335        4.723270\n",
+      "                        0.259167                                                          The Matrix             140763        4.230643\n",
+      "                        0.256870                                                               X-Men              99304        3.891223\n",
+      "                        0.253724                               Harry Potter and the Sorcerer's Stone             106238        4.091709\n",
+      "                        0.251768                                                    X2: X-Men United              98720        3.932202\n",
+      "                        0.248582                       Star Wars: Episode V: The Empire Strikes Back              92470        4.543701\n"
      ]
     }
    ],
    "source": [
-    "get_similar_movies(\"Lord of the Rings: The Fellowship of the Ring\", 0)\n",
+    "get_similar_movies(\"Lord of the Rings: The Fellowship of the Ring\", 30000)\n",
     "# you can see it outputs similar movies \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -553,35 +556,35 @@
      "text": [
       "For movie (Fight Club)\n",
       "- Top 10 movies recommended based on Pearsons'R correlation - \n",
-      " PearsonR                                  Name  count     mean\n",
-      " 0.380089                            12 Monkeys  76475 3.776084\n",
-      " 0.378151                                Snatch  68818 3.848005\n",
-      " 0.364983                               Memento 127318 3.851427\n",
-      " 0.357912                          Pulp Fiction 152078 4.094235\n",
-      " 0.347596                         Trainspotting  24446 3.885953\n",
-      " 0.343847 Eternal Sunshine of the Spotless Mind 110159 3.695304\n",
-      " 0.333834                        Reservoir Dogs  90450 4.003847\n",
-      " 0.326851  The Royal Tenenbaums: Bonus Material   2452 4.015905\n",
-      " 0.325274                                 Seven  99324 4.134952\n",
-      " 0.324509                              Sin City  56147 3.597663\n",
+      " Pearson correlation coefficient                            movie name  number of ratings  average rating\n",
+      "                        0.380089                            12 Monkeys              76475        3.776084\n",
+      "                        0.378151                                Snatch              68818        3.848005\n",
+      "                        0.364983                               Memento             127318        3.851427\n",
+      "                        0.357912                          Pulp Fiction             152078        4.094235\n",
+      "                        0.347596                         Trainspotting              24446        3.885953\n",
+      "                        0.343847 Eternal Sunshine of the Spotless Mind             110159        3.695304\n",
+      "                        0.333834                        Reservoir Dogs              90450        4.003847\n",
+      "                        0.326851  The Royal Tenenbaums: Bonus Material               2452        4.015905\n",
+      "                        0.325274                                 Seven              99324        4.134952\n",
+      "                        0.324509                              Sin City              56147        3.597663\n",
       "For movie (Fight Club)\n",
       "- Top 10 movies recommended based on Pearsons'R correlation - \n",
-      " PearsonR                                  Name  count     mean\n",
-      " 0.364983                               Memento 127318 3.851427\n",
-      " 0.357912                          Pulp Fiction 152078 4.094235\n",
-      " 0.343847 Eternal Sunshine of the Spotless Mind 110159 3.695304\n",
-      " 0.333834                        Reservoir Dogs  90450 4.003847\n",
-      " 0.325274                                 Seven  99324 4.134952\n",
-      " 0.317807                       American Beauty 154832 3.962585\n",
-      " 0.310578                      The Big Lebowski  81316 3.761363\n",
-      " 0.303631                     Kill Bill: Vol. 1 140564 3.759192\n",
-      " 0.299501                          Office Space  90320 4.079318\n",
-      " 0.294644                  The Royal Tenenbaums 147251 3.279835\n"
+      " Pearson correlation coefficient                            movie name  number of ratings  average rating\n",
+      "                        0.364983                               Memento             127318        3.851427\n",
+      "                        0.357912                          Pulp Fiction             152078        4.094235\n",
+      "                        0.343847 Eternal Sunshine of the Spotless Mind             110159        3.695304\n",
+      "                        0.333834                        Reservoir Dogs              90450        4.003847\n",
+      "                        0.325274                                 Seven              99324        4.134952\n",
+      "                        0.317807                       American Beauty             154832        3.962585\n",
+      "                        0.310578                      The Big Lebowski              81316        3.761363\n",
+      "                        0.303631                     Kill Bill: Vol. 1             140564        3.759192\n",
+      "                        0.299501                          Office Space              90320        4.079318\n",
+      "                        0.294644                  The Royal Tenenbaums             147251        3.279835\n"
      ]
     }
    ],
    "source": [
-    "get_similar_movies(\"Fight Club\", 0)\n",
+    "get_similar_movies(\"Fight Club\")\n",
     "get_similar_movies(\"Fight Club\", 80000)\n",
     "# here it actually ouputs movies of the same genre or the the same director\n",
     "# and min count produces better recommendations if used correctly"
@@ -589,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -598,17 +601,17 @@
      "text": [
       "For movie (Saving Private Ryan)\n",
       "- Top 10 movies recommended based on Pearsons'R correlation - \n",
-      " PearsonR              Name  count     mean\n",
-      " 0.348649   Black Hawk Down  77597 3.859608\n",
-      " 0.343554        Braveheart 135601 4.294423\n",
-      " 0.328930         Apollo 13  98116 4.082576\n",
-      " 0.321378         Gladiator 150592 4.202713\n",
-      " 0.321019      Forrest Gump 181508 4.299910\n",
-      " 0.315738  Band of Brothers  37514 4.513328\n",
-      " 0.315564           Platoon  64175 3.986038\n",
-      " 0.303892  We Were Soldiers  64917 4.005299\n",
-      " 0.295405  Schindler's List 101141 4.458004\n",
-      " 0.292609 Sands of Iwo Jima   7803 3.705242\n"
+      " Pearson correlation coefficient        movie name  number of ratings  average rating\n",
+      "                        0.348649   Black Hawk Down              77597        3.859608\n",
+      "                        0.343554        Braveheart             135601        4.294423\n",
+      "                        0.328930         Apollo 13              98116        4.082576\n",
+      "                        0.321378         Gladiator             150592        4.202713\n",
+      "                        0.321019      Forrest Gump             181508        4.299910\n",
+      "                        0.315738  Band of Brothers              37514        4.513328\n",
+      "                        0.315564           Platoon              64175        3.986038\n",
+      "                        0.303892  We Were Soldiers              64917        4.005299\n",
+      "                        0.295405  Schindler's List             101141        4.458004\n",
+      "                        0.292609 Sands of Iwo Jima               7803        3.705242\n"
      ]
     }
    ],
